public/stylesheets/main.css
/* ... */
@media only screen and (max-width: 766px) {
  div.heading2 {
    display: none;
  }
}

label {
	margin-bottom: 0;
}

a:hover {
    color: #fff;
}

.col-centered {
	float: none;
	margin: 0 auto;
}

.main-content {
    width: 90%;
    z-index: 1;
}

.form-group {
    margin-bottom: .5rem;
}

.form-control {
	font-weight: 400;
	text-align: left;
	padding: .75rem 1.5rem;
	border-radius: .4rem;
	font-size: 1rem;
	letter-spacing: 0rem;
	/* border: none; */
}

/*.navigation {
	margin-top: 2.5rem;
}*/

.table-user {
	font-size: 1.25rem;
	padding: .2rem 0 .3rem 1rem;
	font-weight: 200;
	background-color: #2b273f;
	border-radius: .5rem;
    letter-spacing: 0rem;
    color: #fff;
	/* margin-bottom: .5rem;	 */
}

.total-spent {
	font-size: 1.25rem;
	padding-right: .8rem;
	font-weight: 200;
	/* background-color: #272726; */
	border-radius: .5rem;
	letter-spacing: 0rem;
	float: right;
}

table {
    border-collapse: collapse;
    width: 100%;
    margin-bottom: 2rem !important;
}

td {
	font-size: .85rem;
    font-weight: 200;
    color: rgba(255, 255, 255, 0.623)
}

td, th {
    /* border: 1px solid #; */
    text-align: left;
    padding: 3rem;
    letter-spacing: 0rem;
}

.table td, .table th {
    padding: .5rem;
    vertical-align: top;
    border-top: none;
}

thead {
    height: 1px;
}

.table thead th {
    vertical-align: bottom;
    border-bottom: 0px;
    font-weight: 150;
    letter-spacing: 0rem;
    font-size: .75rem;
}

.item-users {
    display: none;
}

.item-id {
    display: none;
}

.item-date {
    width: 10%;
    text-align: left;
    padding-left: 1rem;
}

.item-expense {
    /* width: 70%; */
    text-align: center;
}

.item-cost {
    width: 1%;
    text-align: center;
}

.item-delete {
    width: 16%;
    text-align: right;
    padding: 9px 0 !important;
    cursor: pointer;
}

.footer {
	font-weight: 100;
	font-size: 0.25rem;
	letter-spacing: 0rem;
	margin: 4rem 0 4rem 0rem;
}

/*CALENDAR*/
.ui-widget {
    font-family: Arial,Helvetica,sans-serif;
}

.ui-widget-content {
	border: 1px solid #ffffff;
	background: #ffffff;
	color: #2c333a !important;
	font-weight: 200 !important;
}

.ui-widget-header {
    /* border: 1px solid #caa8a8; */
    background: #fff !important;
    color: #2c333a !important;
    font-weight: 200 !important;
}

.ui-corner-all{
    border-radius: 5px !important;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
    border: 1px solid #b9b9b9;
    background: #ffffff !important;
    font-weight: normal;
    color: #3e3e50;
}

.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {
    border: 1px solid #000 !important;
    background: #fffa90;
    color: #000 !important;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
    border: none;
    background: #fff;
    font-weight: 100;
    color: #757575;
}

/* HIDE NUMBER INDICATOR */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    /* display: none; <- Crashes Chrome on hover */
    -webkit-appearance: none;
    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}


/*APPLE PAY BUTTON*/
/* @supports (-webkit-appearance: -apple-pay-button) { 
    .apple-pay-button {
        display: inline-block;
        -webkit-appearance: -apple-pay-button;
    }
    .apple-pay-button-black {
        -apple-pay-button-style: black;
    }
    .apple-pay-button-white {
        -apple-pay-button-style: white;
        max-width: 8rem;
        margin-top: 1rem;
    }

    .coming-soon {
        color: white;
        font-weight: 100;
        font-size: .25rem;
    }
    
    .apple-pay-button-white-with-line {
        -apple-pay-button-style: white-outline;
    }
}
@supports not (-webkit-appearance: -apple-pay-button) {
    .apple-pay-button {
        display: inline-block;
        background-size: 100% 60%;
        background-repeat: no-repeat;
        background-position: 50% 50%;
        border-radius: 5px;
        padding: 0px;
        box-sizing: border-box;
        min-width: 200px;
        min-height: 32px;
        max-height: 64px;
    }
    .apple-pay-button-black {
        background-image: -webkit-named-image(apple-pay-logo-white);
        background-color: black;
    }
    .apple-pay-button-white {
        background-image: -webkit-named-image(apple-pay-logo-black);
        background-color: white;
    }
    .apple-pay-button-white-with-line {
        background-image: -webkit-named-image(apple-pay-logo-black);
        background-color: white;
        border: .5px solid black;
    } 
} */

.overlay {
    position: fixed; /* Sit on top of the page content */
    display: none; /* Hidden by default */
    width: 100%; /* Full width (cover the whole page) */
    height: 100%; /* Full height (cover the whole page) */
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.8); /* Black background with opacity */
    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
    cursor: pointer; /* Add a pointer on hover */
}

.bg-overlay {
    position: fixed; /* Sit on top of the page content */
    display: none; /* Hidden by default */
    width: 100%; /* Full width (cover the whole page) */
    height: 100%; /* Full height (cover the whole page) */
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.8); /* Black background with opacity */
    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
    cursor: pointer; /* Add a pointer on hover */
}
/* ... */

